--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,9 +37,15 @@
         </activity>
 
         <activity
+            android:name=".MultiPlayerMenuActivity"
+            android:label="Multiplayer"
+            android:parentActivityName=".MainMenuActivity">
+        </activity>
+
+        <activity
             android:name=".bluetooth.DevicePickerActivity"
             android:label="@string/app_name"
-            android:parentActivityName=".MainMenuActivity"
+            android:parentActivityName=".MultiPlayerMenuActivity"
             android:configChanges="orientation|keyboardHidden">
         </activity>
 
