--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:name=".MyApplication">
 
         <service android:name=".bluetooth.BluetoothService"/>
+        <service android:name=".nsd.NsdService"/>
 
         <activity android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
@@ -44,6 +45,13 @@
 
         <activity
             android:name=".bluetooth.DevicePickerActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".MultiPlayerMenuActivity"
+            android:configChanges="orientation|keyboardHidden">
+        </activity>
+
+        <activity
+            android:name=".nsd.NsdPickerActivity"
             android:label="@string/app_name"
             android:parentActivityName=".MultiPlayerMenuActivity"
             android:configChanges="orientation|keyboardHidden">
