--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,13 @@
         </activity>
 
         <activity
+            android:name=".nsd.NsdActivity"
+            android:label="@string/app_name"
+            android:parentActivityName=".bluetooth.DevicePickerActivity"
+            android:configChanges="orientation|keyboardHidden">
+        </activity>
+
+        <activity
             android:name=".ScoresActivity"
             android:label="@string/scores_title"
             android:parentActivityName=".MainMenuActivity"
