--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
 
         <activity
             android:name=".nsd.NsdPickerActivity"
-            android:label="@string/app_name"
+            android:label="@string/menu_local_network"
             android:parentActivityName=".MultiPlayerMenuActivity"
             android:configChanges="orientation|keyboardHidden">
         </activity>
