--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="by.klnvch.link5dots">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
+        android:name=".App"
+        android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:allowBackup="true"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:name=".App">
+        android:theme="@style/AppTheme">
 
         <meta-data
             android:name="com.google.android.gms.games.APP_ID"
@@ -24,17 +23,19 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <service android:name=".bluetooth.BluetoothService"/>
-        <service android:name=".nsd.NsdService"/>
+        <service android:name=".bluetooth.BluetoothService" />
+        <service android:name=".nsd.NsdService" />
+        <service android:name=".online.OnlineService" />
 
-        <activity android:name="com.google.android.gms.ads.AdActivity"
+        <activity
+            android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
 
         <activity
             android:name=".MainMenuActivity"
-            android:label="@string/app_name"
-            android:configChanges="locale">
+            android:configChanges="locale"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -43,8 +44,8 @@
 
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:configChanges="locale">
+            android:configChanges="locale"
+            android:label="@string/app_name">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainMenuActivity" />
@@ -52,8 +53,8 @@
 
         <activity
             android:name=".MultiPlayerMenuActivity"
-            android:label="@string/menu_multi_player"
-            android:configChanges="locale">
+            android:configChanges="locale"
+            android:label="@string/menu_multi_player">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainMenuActivity" />
@@ -61,8 +62,8 @@
 
         <activity
             android:name=".TwoPlayersActivity"
-            android:label="@string/two_players"
-            android:configChanges="locale">
+            android:configChanges="locale"
+            android:label="@string/two_players">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MultiPlayerMenuActivity" />
@@ -70,8 +71,8 @@
 
         <activity
             android:name=".bluetooth.DevicePickerActivity"
-            android:label="@string/device_picker"
-            android:configChanges="orientation|keyboardHidden|locale">
+            android:configChanges="orientation|keyboardHidden|locale"
+            android:label="@string/device_picker">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MultiPlayerMenuActivity" />
@@ -79,8 +80,8 @@
 
         <activity
             android:name=".nsd.NsdPickerActivity"
-            android:label="@string/menu_local_network"
-            android:configChanges="orientation|keyboardHidden|locale">
+            android:configChanges="orientation|keyboardHidden|locale"
+            android:label="@string/menu_local_network">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MultiPlayerMenuActivity" />
@@ -88,8 +89,8 @@
 
         <activity
             android:name=".online.OnlinePickerActivity"
-            android:label="Online"
-            android:configChanges="orientation|keyboardHidden|locale">
+            android:configChanges="orientation|keyboardHidden|locale"
+            android:label="Online">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MultiPlayerMenuActivity" />
@@ -97,8 +98,8 @@
 
         <activity
             android:name=".bluetooth.BluetoothActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|keyboardHidden|locale">
+            android:configChanges="orientation|keyboardHidden|locale"
+            android:label="@string/app_name">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".bluetooth.DevicePickerActivity" />
@@ -106,8 +107,8 @@
 
         <activity
             android:name=".nsd.NsdActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|keyboardHidden|locale">
+            android:configChanges="orientation|keyboardHidden|locale"
+            android:label="@string/app_name">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".bluetooth.DevicePickerActivity" />
@@ -115,8 +116,8 @@
 
         <activity
             android:name=".online.OnlineActivity"
-            android:label="Online"
-            android:configChanges="orientation|keyboardHidden|locale">
+            android:configChanges="orientation|keyboardHidden|locale"
+            android:label="Online">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".online.OnlinePickerActivity" />
@@ -124,9 +125,9 @@
 
         <activity
             android:name=".ScoresActivity"
+            android:configChanges="locale"
             android:label="@string/scores_title"
-            android:screenOrientation="sensorLandscape"
-            android:configChanges="locale">
+            android:screenOrientation="sensorLandscape">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainMenuActivity" />
@@ -134,8 +135,8 @@
 
         <activity
             android:name=".HowToActivity"
-            android:label="@string/how_to_title"
-            android:configChanges="locale">
+            android:configChanges="locale"
+            android:label="@string/how_to_title">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainMenuActivity" />
@@ -143,9 +144,9 @@
 
         <activity
             android:name=".settings.InfoActivity"
+            android:configChanges="locale"
             android:label="@string/application_info_label"
-            android:launchMode="standard"
-            android:configChanges="locale">
+            android:launchMode="standard">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".settings.SettingsActivity" />
@@ -153,8 +154,8 @@
 
         <activity
             android:name=".settings.SettingsActivity"
-            android:label="@string/settings_label"
-            android:configChanges="locale">
+            android:configChanges="locale"
+            android:label="@string/settings_label">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainMenuActivity" />
