--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,14 +28,13 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.1"
 
     defaultConfig {
         applicationId "by.klnvch.link5dots"
         minSdkVersion 14
         targetSdkVersion 27
         versionCode 26
-        versionName "3.6.1"
+        versionName "4.1.0"
 
         resConfigs "en", "be", "de", "es", "fr", "it", "pl", "ru", "uk", "fa"
     }
@@ -48,25 +47,29 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            postprocessing {
+                removeUnusedCode true
+                removeUnusedResources true
+                obfuscate false
+                optimizeCode true
+                proguardFile 'proguard-rules.pro'
+            }
         }
         debug {
             applicationIdSuffix ".debug"
         }
     }
 
-    lintOptions {
-        checkReleaseBuilds false
-        abortOnError false
-    }
+    //lintOptions {
+    //    checkReleaseBuilds false
+    //    abortOnError false
+    //}
 }
 
 dependencies {
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'io.reactivex.rxjava2:rxjava:2.1.5'
-    compile 'com.google.code.gson:gson:2.8.2'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
+    implementation 'com.google.code.gson:gson:2.8.2'
 
     implementation 'com.android.support:appcompat-v7:27.0.1'
     implementation 'com.android.support:design:27.0.1'
