--- a/build.gradle
+++ b/build.gradle
@@ -26,8 +26,8 @@
 buildscript {
     ext.kotlin_version = '1.2.0'
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.0-alpha04'
@@ -38,7 +38,11 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         google()
+        jcenter()
     }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
