--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,11 @@ android {
             applicationIdSuffix ".debug"
         }
     }
+
+    lintOptions {
+        checkReleaseBuilds false
+        abortOnError false
+    }
 }
 
 dependencies {
