--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
         versionName "4.3.0"
 
         resConfigs "en", "be", "de", "es", "fr", "it", "pl", "ru", "uk", "fa"
+        testInstrumentationRunner = 'android.support.test.runner.AndroidJUnitRunner'
     }
 
     compileOptions {
@@ -61,6 +62,9 @@ android {
         debug {
             applicationIdSuffix ".debug"
         }
+    }
+
+    productFlavors {
     }
 }
 
@@ -89,6 +93,12 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:3.3.0'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs'
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
