--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,9 +82,7 @@ dependencies {
 
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
-        transitive = true
-    }
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.1'
 
     implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-auth:12.0.1'
