--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'io.fabric'
 
 android {
@@ -37,7 +38,7 @@ android {
         targetSdkVersion 27
         multiDexEnabled true
         versionCode 36
-        versionName "4.3.4"
+        versionName "4.4.0"
 
         resConfigs "en", "be", "de", "es", "fr", "it", "pl", "ru", "uk", "fa"
         testInstrumentationRunner = 'android.support.test.runner.AndroidJUnitRunner'
@@ -80,18 +81,28 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.12'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.google.guava:guava:24.1-android'
 
-    compileOnly 'org.projectlombok:lombok:1.16.20'
-    annotationProcessor 'org.projectlombok:lombok:1.16.20'
+    implementation "com.google.dagger:dagger:2.13"
+    implementation "com.google.dagger:dagger-android:2.13"
+    implementation "com.google.dagger:dagger-android-support:2.13"
+    annotationProcessor "com.google.dagger:dagger-compiler:2.13"
+    annotationProcessor "com.google.dagger:dagger-android-processor:2.13"
+    kapt 'com.google.dagger:dagger-compiler:2.13'
+    kapt 'com.google.dagger:dagger-android-processor:2.13'
 
     implementation "android.arch.persistence.room:runtime:1.0.0"
     implementation "android.arch.persistence.room:rxjava2:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    kapt "android.arch.persistence.room:compiler:1.0.0"
     implementation "android.arch.lifecycle:common-java8:1.1.1"
 
     implementation 'com.android.support:design:27.1.1'
