--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
+def dagger_version = "2.16"
+
 android {
     signingConfigs {
         debugConfig {
@@ -54,8 +56,8 @@ android {
         minSdkVersion 14
         targetSdkVersion 27
         multiDexEnabled true
-        versionCode 39
-        versionName "4.4.3"
+        versionCode 40
+        versionName "4.4.4"
 
         resConfigs "en", "be", "de", "es", "fr", "it", "pl", "ru", "uk", "fa"
         testInstrumentationRunner = 'android.support.test.runner.AndroidJUnitRunner'
@@ -104,13 +106,13 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.google.guava:guava:25.0-android'
-    implementation 'com.google.dagger:dagger:2.13'
-    implementation 'com.google.dagger:dagger-android:2.13'
-    implementation 'com.google.dagger:dagger-android-support:2.13'
-    annotationProcessor "com.google.dagger:dagger-compiler:2.13"
-    annotationProcessor "com.google.dagger:dagger-android-processor:2.13"
-    kapt 'com.google.dagger:dagger-compiler:2.13'
-    kapt 'com.google.dagger:dagger-android-processor:2.13'
+    implementation "com.google.dagger:dagger:${dagger_version}"
+    implementation "com.google.dagger:dagger-android:${dagger_version}"
+    implementation "com.google.dagger:dagger-android-support:${dagger_version}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
+    annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
+    kapt "com.google.dagger:dagger-compiler:${dagger_version}"
+    kapt "com.google.dagger:dagger-android-processor:${dagger_version}"
     implementation 'android.arch.persistence.room:runtime:1.1.0'
     implementation 'android.arch.persistence.room:rxjava2:1.1.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.0"
