--- a/app/src/androidTest/AndroidManifest.xml
+++ b/app/src/androidTest/AndroidManifest.xml
@@ -22,8 +22,7 @@
   ~ SOFTWARE.
   -->
 
-<manifest xmlns:tools="http://schemas.android.com/tools"
-    package="by.klnvch.link5dots">
+<manifest xmlns:tools="http://schemas.android.com/tools">
 
     <uses-sdk tools:overrideLibrary="android.support.test.uiautomator.v18" />
 </manifest>
