--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,18 +24,18 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'io.fabric'
+apply plugin: 'com.google.firebase.crashlytics'
 
 def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
-def retrofit_version = "2.5.0"
-def dagger_version = "2.21"
-def lifecycle_version = '2.0.0'
-def support_version = '1.0.0'
+def retrofit_version = '2.9.0'
+def dagger_version = '2.45'
+def lifecycle_version = '2.5.1'
+def support_version = '1.8.0'
+def room_version = '2.5.0'
 
 android {
     signingConfigs {
@@ -52,16 +52,16 @@ android {
             storePassword keystoreProperties['releaseStorePassword']
         }
     }
-    compileSdkVersion 28
+    compileSdkVersion 33
     defaultConfig {
         applicationId "by.klnvch.link5dots"
-        minSdkVersion 14
-        targetSdkVersion 28
+        minSdkVersion 19
+        targetSdkVersion 33
         multiDexEnabled true
         versionCode 48
         versionName "4.4.12"
+        resConfigs 'en', 'be', 'de', 'es', 'fr', 'it', 'pl', 'ru', 'uk', 'fa'
 
-        resConfigs "en", "be", "de", "es", "fr", "it", "pl", "ru", "uk", "fa"
         testInstrumentationRunner = 'androidx.test.runner.AndroidJUnitRunner'
 
         javaCompileOptions {
@@ -94,10 +94,9 @@ android {
             signingConfig signingConfigs.debugConfig
         }
     }
-    productFlavors {
-    }
-    dexOptions {
-        javaMaxHeapSize "4g"
+    namespace 'by.klnvch.link5dots'
+    buildFeatures {
+        viewBinding true
     }
 }
 
@@ -107,41 +106,41 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava:${retrofit_version}"
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.7'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'org.greenrobot:eventbus:3.1.1'
-    api 'com.google.guava:guava:27.1-android'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.greenrobot:eventbus:3.3.1'
+    api 'com.google.guava:guava:31.1-jre'
     implementation "com.google.dagger:dagger:${dagger_version}"
     implementation "com.google.dagger:dagger-android:${dagger_version}"
     implementation "com.google.dagger:dagger-android-support:${dagger_version}"
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.5'
+    implementation 'com.google.firebase:firebase-analytics:21.2.0'
     annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
     annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
     kapt "com.google.dagger:dagger-compiler:${dagger_version}"
     kapt "com.google.dagger:dagger-android-processor:${dagger_version}"
-    implementation "androidx.room:room-runtime:${lifecycle_version}"
-    implementation "androidx.room:room-rxjava2:${lifecycle_version}"
-    annotationProcessor "androidx.room:room-compiler:${lifecycle_version}"
-    kapt "androidx.room:room-compiler:${lifecycle_version}"
-    implementation "androidx.lifecycle:lifecycle-common-java8:${lifecycle_version}"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.room:room-runtime:${room_version}"
+    implementation "androidx.room:room-rxjava2:${room_version}"
+    annotationProcessor "androidx.room:room-compiler:${room_version}"
+    kapt "androidx.room:room-compiler:${room_version}"
     implementation "com.google.android.material:material:${support_version}"
-    implementation "androidx.cardview:cardview:${support_version}"
-    implementation "androidx.preference:preference:${support_version}"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
-    implementation 'androidx.core:core-ktx:1.0.1'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
-    implementation 'com.google.firebase:firebase-core:16.0.8'
-    implementation 'com.google.firebase:firebase-auth:16.2.0'
-    implementation 'com.google.firebase:firebase-database:16.1.0'
-    implementation 'com.firebaseui:firebase-ui-database:4.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha07'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation 'com.google.firebase:firebase-core:21.1.1'
+    implementation 'com.google.firebase:firebase-auth:21.1.0'
+    implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1', {
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude group: 'com.google.code.findbugs'
     }
-    androidTestImplementation "androidx.room:room-testing:${lifecycle_version}"
-    androidTestImplementation 'androidx.test:rules:1.1.1'
+    androidTestImplementation "androidx.room:room-testing:${room_version}"
+    androidTestImplementation 'androidx.test:rules:1.5.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
