--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 def retrofit_version = '2.9.0'
 def dagger_version = '2.45'
-def lifecycle_version = '2.5.1'
+def lifecycle_version = '2.6.0'
 def support_version = '1.8.0'
 def room_version = '2.5.0'
 
@@ -121,20 +121,29 @@ dependencies {
     kapt "com.google.dagger:dagger-compiler:${dagger_version}"
     kapt "com.google.dagger:dagger-android-processor:${dagger_version}"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.room:room-runtime:${room_version}"
     implementation "androidx.room:room-rxjava2:${room_version}"
     annotationProcessor "androidx.room:room-compiler:${room_version}"
     kapt "androidx.room:room-compiler:${room_version}"
+    implementation "androidx.room:room-ktx:${room_version}"
     implementation "com.google.android.material:material:${support_version}"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha07'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha08'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    runtimeOnly 'org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.6.4'
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.firebase:firebase-database:20.1.0'
     implementation 'com.firebaseui:firebase-ui-database:8.0.2'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${kotlin_version}"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlin_version}"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:${kotlin_version}"
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1', {
         exclude group: 'com.android.support', module: 'support-annotations'
