--- a/build.gradle
+++ b/build.gradle
@@ -29,10 +29,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
+        def nav_version = "2.5.3"
         classpath 'com.android.tools.build:gradle:7.4.2'
         classpath 'com.google.gms:google-services:4.3.15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.4'
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
