--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,12 @@ keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 def retrofit_version = '2.9.0'
 def dagger_version = '2.45'
-def lifecycle_version = '2.6.0'
+def lifecycle_version = '2.6.1'
 def support_version = '1.8.0'
-def room_version = '2.5.0'
-def work_version = '2.8.0'
+def room_version = '2.5.1'
+def work_version = '2.8.1'
 def nav_version = "2.5.3"
+def appcompat_version = "1.6.1"
 
 android {
     signingConfigs {
@@ -120,12 +121,13 @@ dependencies {
     implementation "com.google.dagger:dagger:${dagger_version}"
     implementation "com.google.dagger:dagger-android:${dagger_version}"
     implementation "com.google.dagger:dagger-android-support:${dagger_version}"
-    implementation 'com.google.firebase:firebase-crashlytics:18.3.5'
-    implementation 'com.google.firebase:firebase-analytics:21.2.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.3.6'
+    implementation 'com.google.firebase:firebase-analytics:21.2.1'
     annotationProcessor "com.google.dagger:dagger-compiler:${dagger_version}"
     annotationProcessor "com.google.dagger:dagger-android-processor:${dagger_version}"
     kapt "com.google.dagger:dagger-compiler:${dagger_version}"
     kapt "com.google.dagger:dagger-android-processor:${dagger_version}"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
@@ -136,7 +138,7 @@ dependencies {
     implementation "androidx.room:room-ktx:${room_version}"
     implementation "com.google.android.material:material:${support_version}"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha08'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha09'
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.preference:preference-ktx:1.2.0'
     implementation "androidx.datastore:datastore-preferences:1.0.0"
